# routes/locations.js
@@ -5,11 +5,10 @@ const itemController = require('../controllers/items');
 const dublication = require('../middleware/checkDublication');
 const { isAuthenticated } = require("../middleware/authenticate");
 
-router.get('/', itemController.getAll);
-router.get('/:id', itemController.getSingle);
-router.post('/', saveItem, dublication.checkDuplicateTagNumber, itemController.createItem);
-router.put('/:id', saveItem, dublication.checkDuplicateTagNumber, itemController.updateItem);
+router.get('/', isAuthenticated, itemController.getAll);
+router.get('/:id', isAuthenticated, itemController.getSingle);
+router.post('/', saveItem, isAuthenticated, dublication.checkDuplicateLocation, itemController.createItem);
+router.put('/:id', saveItem, isAuthenticated, dublication.checkDuplicateLocation, itemController.updateItem);
 router.delete('/:id', itemController.deleteItem);
-router.post('/:id', itemController.issueOutItem);
 
 module.exports = router;
