# server.js
@@ -1,13 +1,10 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
-const passport = require('passport');
 const session = require('express-session');
-const GitHubStrategy = require('passport-github2').Strategy;
 const cors = require('cors');
 const port = process.env.PORT || 3000;
 const app = express();
-
 
 app
     .use(bodyParser.json())
@@ -16,62 +13,21 @@ app
         resave: false, 
         saveUninitialized: true,
     }))
-    // This is the basic express session({..}) initialization.
-    .use(passport.initialize())
-    // init passport on every rout call
-    .use(passport.session())
-    // allow passport to use "express session".
     .use((req, res, next) => {
         res.setHeader("Access-Control-Allow-Origin", "*");
         res.setHeader(
             'Access-Control-Allow-Headers',
             'Origin, X-RequestedWith, Content-Type, Accept, Z-Key'
         );
-        res.setHeader('Access-Control-Allow-Methods','GET, POST, PUT, DELETE, OPTIONS');
+        res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
         next();
     })
-    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATH']}))
-    .use(cors( { origin: '*' } ))
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
+    .use(cors({ origin: '*' }))
     .use('/', require('./routes'));
 
-passport.use(new GitHubStrategy({
-    clientID: process.env.GITHUB_CLIENT_ID,
-    clientSecret: process.env.GITHUB_CLIENT_SECRET,
-    callbackURL: process.env.CALLBACK_URL
-},
-function(accessToken, refreshToken, profile, done) {
-    //User.findOrCreate({ githubId: profile.id}, function(err, user) {
-    return done(null, profile);
-    //});
-    }
-)),
-
-passport.serializeUser((user, done) => {
-    done(null, user);
-});
-passport.deserializeUser((user, done) => {
-    done(null, user);
-})
-
 app.get('/', (req, res) => {
-    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}`: "Logged Out");
-})
-
-app.get('/github/callback', passport.authenticate('github', {
-    failureRedirect:'/api-docs', session: false}),
-(req, res) => {
-    req.session.user = req.user;
-    res.redirect('/');
-});
-
-// Handle uncaught exceptions
-process.on('uncaughtException', (err, origin) => {
-    console.error(`Caught exception: ${err}\n` + `Exception origin: ${origin}`);
-});
-
-// Handle unhandled promise rejections
-process.on('unhandledRejection', (reason, promise) => {
-    console.error('Unhandled Rejection at:', promise, 'reason:', reason);
+    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.firstName}` : "Logged Out");
 });
 
 mongodb.initDb((err) => {
@@ -79,9 +35,7 @@ mongodb.initDb((err) => {
         console.log(err);
     }else{
         app.listen(port, () => {
-        console.log(`Database is listening and node Running on port ${port}`)});
+            console.log(`Database is listening and node Running on port ${port}`);
+        });
     }
 });
-
-
-
